--- a/blogs-frontend/src/css/style.css
+++ b/blogs-frontend/src/css/style.css
@@ -220,10 +220,21 @@ html {
 
 /* add posts */
 
+.add-post-section{
+  width: 100%;
+  height: 100%;
+  /* background-color: var(--primary-color); */
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  position: relative;
+
+}
+
 /* errors */
 
 .errors h1{
-  padding-top: 10rem;
+  padding-top: 20rem;
   text-align: center;
   font-size: 2.5rem;
 
@@ -231,7 +242,7 @@ html {
 
 .errors ul{
     text-align: center;
-  font-size: 1.2rem;
+  font-size: 2rem;
 
 }
 /* end of errors */
@@ -245,6 +256,7 @@ form label{
 }
 
 form input {
+  height:4rem;
   border: 1px solid black;
 }
 
@@ -261,18 +273,17 @@ form input {
 
 .imagesAddPost img{
   width: 100%;
-  height: 100%;
   opacity: 0.7;
 }
 
 .blog-form{
-  margin-top: 20rem;
+  margin-top: 12rem;
 }
 
 
 /* quil editor */
 .ql-editor{
-  min-height: 25rem;
+  min-height: 30rem;
 }
 /* end of quil editor */
 
