--- a/blogs-frontend/src/css/style.css
+++ b/blogs-frontend/src/css/style.css
@@ -162,6 +162,7 @@ html {
 .main-container{
   margin-bottom: 12rem;
 }
+
 .section-2 h1{
   font-size: 5rem;
   font-weight: 900;
@@ -207,9 +208,10 @@ html {
 
 .imagesShowPost img{
   width: 100%;
+  height: 100%;
   opacity: 0.3;
 }
-
+ 
 
 .link{
   color: black;
@@ -220,49 +222,6 @@ html {
 
 /* add posts */
 
-.add-post-section{
-  width: 100%;
-  height: 100%;
-  /* background-color: var(--primary-color); */
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  position: relative;
-
-}
-
-/* errors */
-
-.errors h1{
-  padding-top: 20rem;
-  text-align: center;
-  font-size: 2.5rem;
-
-}
-
-.errors ul{
-    text-align: center;
-  font-size: 2rem;
-
-}
-/* end of errors */
-
-
-
-form label{
-  font-weight: 900;
-    font-size: 2rem;
-    margin-top: 1rem;
-}
-
-form input {
-  height:4rem;
-  border: 1px solid black;
-}
-
-.button{
-    font-size: 3rem;
-}
 
 .imagesAddPost{
   position: absolute;
@@ -276,8 +235,43 @@ form input {
   opacity: 0.7;
 }
 
+
+/* errors */
+
+.errors h1{
+  padding-top: 20rem;
+  text-align: center;
+  font-size: 2rem;
+
+}
+
+.errors ul{
+    text-align: center;
+  font-size: 1.5rem;
+
+}
+/* end of errors */
+
+
+
+form label{
+  font-weight: 900;
+    font-size: 2rem;
+    margin-top: 0.5rem;
+}
+
+form input {
+  height:4rem;
+  border: 1px solid black;
+}
+
+.button{
+    font-size: 2rem;
+}
+
+
 .blog-form{
-  margin-top: 12rem;
+  margin-top: 20rem;
 }
 
 
@@ -329,6 +323,11 @@ form input {
   .section-1-banner p{
     text-align: center;
   }
+
+  .blog-form{
+    margin-top: 20rem;
+  }
+
 }
 
 @media (min-width: 540px) {
@@ -459,9 +458,6 @@ form input {
   font-size: 2rem;
 }
 
-  .imagesShowPost img{
-    height: 200vw;
-  }
 
 
 }
@@ -483,16 +479,26 @@ form input {
 
 
 
-@media (min-width:768px){
+@media (min-width:1024px) and (max-width:1366px){
 
 
   .imagesAddPost img{
     height: 100vh
   }
 
-}
+} 
 
-@media (max-width: 640px) {
+@media (min-width:726px) and (max-width:1024px){
+
+
+  .imagesAddPost img{
+    height: 100vh
+  }
+
+} 
+
+
+@media (max-width: 640px){
 
     .imagesAddPost img{
     height: 250vw;
