--- a/blogs-frontend/src/css/style.css
+++ b/blogs-frontend/src/css/style.css
@@ -235,9 +235,11 @@ html {
 }
 
 .imagesShowPost img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   opacity: 0.23;
+  object-fit: none;
+  object-position: center;
 }
 
 .link {
@@ -306,6 +308,39 @@ form input {
 /* end of blogs details */
 
 /* posts */
+
+.nav-link-post {
+  font-size: 1.5rem;
+  font-weight: 900;
+  color: black;
+  width: 15rem;
+  margin: 0 3rem;
+  text-transform: uppercase;
+  border: 0.1rem solid black;
+  text-align: center;
+  padding: 0.2rem 0;
+  letter-spacing: 0.1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.nav-link-post::before {
+  content: "";
+  position: absolute;
+  width: 150%;
+  height: 5rem;
+  background-color: #d50000;
+  left: -50%;
+  transform: rotate(-40deg) translateX(-4rem);
+  transform-origin: left bottom;
+  opacity: 0.8;
+  transition: left 0.3s;
+}
+
+.nav-link-post:hover::before {
+  left: 110%;
+}
+
 .blogs-container {
   margin-top: 5rem;
   background-color: #6edae6;
@@ -346,6 +381,15 @@ form input {
   .blog-form {
     margin-top: 20rem;
   }
+
+    .section-2 h1 {
+    font-size: 4rem;
+  }
+
+  .section-2 h2 {
+    font-size: 2.5rem;
+  }
+
 }
 
 @media (min-width: 540px) {
@@ -367,38 +411,9 @@ form input {
     font-size: 3rem;
     text-align: center;
   }
+
 }
 
-@media (max-width: 600px) {
-  .navbar {
-    right: 0.5rem;
-  }
-
-  .nav-link {
-    font-size: 1.2rem;
-    width: 10rem;
-    margin: 0.2rem;
-  }
-
-  .logo-link {
-    top: 4rem;
-    left: 0.5rem;
-  }
-
-  .logo {
-    height: 3.5rem;
-  }
-
-  .section-1-banner p {
-    font-size: 2.5rem;
-    text-align: center;
-  }
-
-  .nav-link::before {
-    content: "";
-    width: 150%;
-  }
-}
 
 @media (min-width: 280px) and (max-width: 653px) {
   .nav-link {
@@ -416,6 +431,15 @@ form input {
     font-size: 2rem;
     text-align: center;
   }
+
+    .blog-form {
+    margin-top: 40rem;
+  }
+
+  .imagesAddPost img {
+    height: 400vw;
+  }
+
 }
 
 @media (min-width: 320px) and (max-width: 568px) {
@@ -429,29 +453,79 @@ form input {
   }
 
   .nav-link {
-    font-size: 1.2rem;
-    width: 9rem;
-    margin: 0.1rem;
+    left: 1.5rem;
   }
 
   .section-1-banner p {
     font-size: 2rem;
     text-align: center;
   }
-}
 
-@media (min-width: 768px) {
-  .section-2 h1 {
-    font-size: 4rem;
+    .blog-form {
+    margin-top: 45rem;
+  }
+  .imagesAddPost img {
+    height: 300vw;
   }
 
-  .section-2 h2 {
-    font-size: 2rem;
-  }
+  
+
 }
 
-@media (max-width: 600px) {
-  .section-2 h1 {
+
+@media (min-width: 375px) and (max-width: 812px) {
+  .imagesShowPost img{
+    height: 100%;
+  }
+
+  .nav-link{
+    left: 0;
+  }
+
+  .nav-link-post{
+    margin: 0;
+    width: 10rem;
+    padding: 0;
+
+  }
+
+
+
+}
+
+
+@media (min-width: 1024px) and (max-width: 1366px) {
+  .imagesAddPost img {
+    height: 100vh;
+  }
+
+    .imagesShowPost img{
+    height: 100%;
+  }
+
+  .nav-link{
+    right: 15rem;
+  }
+
+
+}
+
+@media (min-width: 726px) and (max-width: 1024px) {
+  .imagesAddPost img {
+    height: 100vh;
+  }
+
+  .nav-link{
+    font-size: 1.9rem;
+  }
+
+  /* .imagesShowPost img{
+    height: 500vw;
+  } */
+}
+
+@media (max-width: 667px) {
+    .section-2 h1 {
     font-size: 3rem;
   }
 
@@ -459,24 +533,6 @@ form input {
     font-size: 2rem;
   }
 
-  .imagesShowPost img {
-    height: 500vw;
-  }
-}
-
-@media (min-width: 1024px) and (max-width: 1366px) {
-  .imagesAddPost img {
-    height: 100vh;
-  }
-}
-
-@media (min-width: 726px) and (max-width: 1024px) {
-  .imagesAddPost img {
-    height: 100vh;
-  }
-}
-
-@media (max-width: 640px) {
   .imagesAddPost img {
     height: 250vw;
   }
@@ -484,16 +540,43 @@ form input {
   .blog-form {
     margin-top: 35rem;
   }
-}
-
-@media (min-width: 280px) and (max-width: 653px) {
-  .blog-form {
-    margin-top: 40rem;
+  
+  .nav-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.4rem;
+    width: 8rem;
   }
 
-  .imagesAddPost img {
-    height: 400vw;
+    .navbar {
+      right: 1.5rem;
   }
+
+
+  .section-1-banner p {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+
+  .nav-link::before {
+    content: "";
+    width: 150%;
+  }
+
+    .imagesShowPost img{
+    height: 100%;
+  }
+
+    .nav-link-post{
+    margin: 0;
+    width: 10rem;
+    padding: 0;
+
+  }
+
+
+
 }
 
 /* @media(min-width:360px) and (max-width:640px){
@@ -502,13 +585,5 @@ form input {
   }
 } */
 
-@media (min-width: 320px) and (max-width: 568px) {
-  .blog-form {
-    margin-top: 45rem;
-  }
-  .imagesAddPost img {
-    height: 300vw;
-  }
-}
 
 /* end of responsive */
